# LAG

./: README.md  pyproject.toml
renders/: render_1v1.py
scripts/: train_selfplay_shoot.sh
