[project]
name = "lag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "geographiclib>=2.1",
    "gym>=0.26.2",
    "gymnasium>=1.1.1",
    "icecream>=2.1.8",
    "jsbsim==1.1.6",
    "pymap3d>=3.2.0",
    "setproctitle>=1.3.7",
    "shapely==1.7.1",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "wandb>=0.22.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"
